--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.navigation:navigation-runtime:2.2.1'
     implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:24.1.1'
 }
